envoy-setup/dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mainapp-envoy-sidecar-deployment
  labels:
    app: mainapp-envoy-sidecar
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mainapp-envoy-sidecar
  template:
    metadata:
      labels:
        app: mainapp-envoy-sidecar
    # The imp stuff
    spec:
      # Deployment has 2 containers!
      containers:
      - name: mainapp-envoy-sidecar
        image: kaium123/mainapp-envoy-sidecar:4
        ports:
        - containerPort: 5199
          name: envoy-port
        

---
apiVersion: v1
kind: Service
metadata:
  name: mainapp-envoy-sidecar-svc
spec:
  type: LoadBalancer
  selector:
    app: mainapp-envoy-sidecar
  ports:
  # Service only exposes the Envoy container
  - name: mainapp-envoy-sidecar-svc-port
    protocol: TCP
    port: 5199
    targetPort: 5199
