envoy-setup/envoy.yaml
admin:
  access_log_path: /dev/stdout
  address:
    socket_address: {address: 0.0.0.0, port_value: 8081}

static_resources:
  listeners:
  - name: mainapp_sidecar_listener
    address:
      socket_address: {address: 0.0.0.0, port_value: 5199}
        
    filter_chains:
    - filters:

      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: mainapp_sidecar_hcm_filter
          codec_type: AUTO
          access_log:
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.file.v3.FileAccessLog
              path: /dev/stdout
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
          route_config:
            name: mainapp_sidecar_http_route_config
            virtual_hosts:
            - name: mainapp_sidecar_virtual_host
              domains: 
              - "*"
              routes:
              - name:
                match:
                  prefix: "/"
                route:
                  cluster: mainapp_service
  clusters:
  - name: mainapp_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: mainapp_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # reroute to service container in the same K8s deployment
                address: 192.168.49.2
                port_value: 31415
